Fix display on small screens

--- a/src/styles/components/_drawer-course.scss
+++ b/src/styles/components/_drawer-course.scss
@@ -36,6 +36,15 @@
 
   web-search {
     margin: 0 16px;
+
+    .web-search__input-wrapper {
+      display: flex;
+    }
+
+    .web-search__open-btn,
+    .web-search__close-btn {
+        display: none;
+    }
   }
 
   .web-search-popout {
